refactor + user docs: add schema.sql + users swagggo docs
